--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,14 @@ body {
     padding: 0;
 }
 
+
+
+.principal {
+background-image: url("img/Background.png");
+background-repeat: no-repeat;
+}
+
+.container {
+height: 100vh
+
+}
